// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionTitle should render Section title 1`] = `
<div>
  <div
    class="section-title"
  >
    Section title
  </div>
</div>
`;

exports[`SectionTitle should render Section title with custom className 1`] = `
<div>
  <div
    class="section-title custom-class-name"
  >
    Section title
  </div>
</div>
`;
